fazendo chamada no viaCEP para recuperar os dados de endereço

--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -35,86 +35,89 @@
       </div>
   </div>
 
-  <div class="form-group">
-    <div class="col-sm-3" [ngClass]="aplicaCssErro(cep)">
-        <label for="cep" [class.control-label]="!cep.valid && cep.touched">CEP</label>
-        <input type="cep" class="form-control" id="cep" placeholder="00000-00"
-            name="cep" ngModel required  #cep="ngModel" >
+  <div ngModelGroup = "endereco">
+
+    <div class="form-group">
+      <div class="col-sm-3" [ngClass]="aplicaCssErro(cep)">
+          <label for="cep" [class.control-label]="!cep.valid && cep.touched">CEP</label>
+          <input type="cep" class="form-control" id="cep" placeholder="00000-00"
+              name="cep" ngModel required  #cep="ngModel" (blur)="consultaCep($event.target.value)">
+              
+          <app-campo-control-erro 
+            [mostrarErro]="verificaValidTouched(cep)" 
+            msgErro="CEP é obrigatório.">
+          </app-campo-control-erro>
+        </div>
+
+      <div class="col-sm-3" [ngClass]="aplicaCssErro(numero)">
+        <label for="numero" [class.control-label]="!numero.valid && numero.touched">Número</label>
+        <input type="numero" class="form-control" id="numero" placeholder=""
+            name="numero" ngModel required  #numero="ngModel" >
             
         <app-campo-control-erro 
-          [mostrarErro]="verificaValidTouched(cep)" 
-          msgErro="CEP é obrigatório.">
+          [mostrarErro]="verificaValidTouched(numero)" 
+          msgErro="Número é obrigatório.">
         </app-campo-control-erro>
       </div>
 
-    <div class="col-sm-3" [ngClass]="aplicaCssErro(numero)">
-      <label for="numero" [class.control-label]="!numero.valid && numero.touched">Número</label>
-      <input type="numero" class="form-control" id="numero" placeholder=""
-          name="numero" ngModel required  #numero="ngModel" >
-          
-      <app-campo-control-erro 
-        [mostrarErro]="verificaValidTouched(numero)" 
-        msgErro="Número é obrigatório.">
-      </app-campo-control-erro>
+      <div class="col-sm-6" >
+          <label for="complemento">Complemento</label>
+          <input type="complemento" class="form-control" id="complemento" placeholder="Apartamento, andar..."
+              name="complemento" ngModel   #complemento="ngModel" >
+      </div>
     </div>
 
-    <div class="col-sm-6" >
-        <label for="complemento">Complemento</label>
-        <input type="complemento" class="form-control" id="complemento" placeholder="Apartamento, andar..."
-            name="complemento" ngModel   #complemento="ngModel" >
+    <div class="form-group" [ngClass]="aplicaCssErro(rua)">
+
+        <div class="col-sm-12">
+          <label for="rua" [class.control-label]="!rua.valid && rua.touched">Rua</label>
+        </div>
+        <div class="col-sm-12">
+          <input type="text" class="form-control" id="rua" placeholder="Rua..."
+              name="rua" ngModel required #rua="ngModel" >
+              
+        <app-campo-control-erro 
+          [mostrarErro]="verificaValidTouched(rua)" 
+          msgErro="Rua é obrigatório.">
+        </app-campo-control-erro>
+        </div>
     </div>
-  </div>
 
-  <div class="form-group" [ngClass]="aplicaCssErro(rua)">
+    <div class="form-group">
+        <div class="col-sm-5" [ngClass]="aplicaCssErro(bairro)">
+          <label for="bairro" [class.control-label]="!bairro.valid && bairro.touched">Bairro</label>
+          <input type="bairro" class="form-control" id="bairro" 
+              name="bairro" ngModel required  #bairro="ngModel" >
+              
+          <app-campo-control-erro 
+            [mostrarErro]="verificaValidTouched(bairro)" 
+            msgErro="Bairro é obrigatório.">
+          </app-campo-control-erro>
+        </div>
 
-      <div class="col-sm-12">
-        <label for="rua" [class.control-label]="!rua.valid && rua.touched">Rua</label>
-      </div>
-      <div class="col-sm-12">
-        <input type="text" class="form-control" id="rua" placeholder="Rua..."
-             name="rua" ngModel required #rua="ngModel" >
-             
-      <app-campo-control-erro 
-        [mostrarErro]="verificaValidTouched(rua)" 
-        msgErro="Rua é obrigatório.">
-      </app-campo-control-erro>
-      </div>
-  </div>
+        <div class="col-sm-4" [ngClass]="aplicaCssErro(cidade)">
+          <label for="cidade" [class.control-label]="!cidade.valid && cidade.touched">Cidade</label>
+          <input type="cidade" class="form-control" id="cidade" 
+              name="cidade" ngModel required  #cidade="ngModel" >
+              
+          <app-campo-control-erro 
+            [mostrarErro]="verificaValidTouched(cidade)" 
+            msgErro="Cidade é obrigatório.">
+          </app-campo-control-erro>
+        </div>
 
-  <div class="form-group">
-      <div class="col-sm-5" [ngClass]="aplicaCssErro(bairro)">
-        <label for="bairro" [class.control-label]="!bairro.valid && bairro.touched">Bairro</label>
-        <input type="bairro" class="form-control" id="bairro" 
-            name="bairro" ngModel required  #bairro="ngModel" >
-            
-        <app-campo-control-erro 
-          [mostrarErro]="verificaValidTouched(bairro)" 
-          msgErro="Bairro é obrigatório.">
-        </app-campo-control-erro>
-      </div>
+        <div class="col-sm-3" [ngClass]="aplicaCssErro(estado)" >
+          <label for="estado" [class.control-label]="!estado.valid && estado.touched">Estado</label>
+          <input type="estado" class="form-control" id="estado" 
+              name="estado" ngModel required  #estado="ngModel" >
+              
+          <app-campo-control-erro 
+            [mostrarErro]="verificaValidTouched(estado)" 
+            msgErro="Estado é obrigatório.">
+          </app-campo-control-erro>
+        </div>
 
-      <div class="col-sm-4" [ngClass]="aplicaCssErro(cidade)">
-        <label for="cidade" [class.control-label]="!cidade.valid && cidade.touched">Cidade</label>
-        <input type="cidade" class="form-control" id="cidade" 
-            name="cidade" ngModel required  #cidade="ngModel" >
-            
-        <app-campo-control-erro 
-          [mostrarErro]="verificaValidTouched(cidade)" 
-          msgErro="Cidade é obrigatório.">
-        </app-campo-control-erro>
-      </div>
-
-      <div class="col-sm-3" [ngClass]="aplicaCssErro(estado)" >
-        <label for="estado" [class.control-label]="!estado.valid && estado.touched">Estado</label>
-        <input type="estado" class="form-control" id="estado" 
-            name="estado" ngModel required  #estado="ngModel" >
-            
-        <app-campo-control-erro 
-          [mostrarErro]="verificaValidTouched(estado)" 
-          msgErro="Estado é obrigatório.">
-        </app-campo-control-erro>
-      </div>
-
+    </div>
   </div>
 
   <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Enviar</button>
