--- a/src/app/shared/campo-control-erro/campo-control-erro.component.html
+++ b/src/app/shared/campo-control-erro/campo-control-erro.component.html
@@ -1,9 +1,9 @@
 <div  *ngIf="mostrarErro">
-  <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+  <span class="glyphicon glyphicon-remove form-control-feedback" [class.campo-pequeno]="mudarAltura" aria-hidden="true"></span>
   <span id="nomes" class="sr-only">(error)</span>
   <div  class="alert alert-danger" role="alert" >
     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
     <span class="sr-only">Error:</span>
-    {{ msgErro }}
+    {{ mostraMsg() }}
   </div>
 </div>
